# compact

./: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
app-service/: README.md  run-indexeddb-tests.mjs
app-service/server/: index.js  package.json
app-service/src/: App.tsx
docs/: COMPRESSOR_IMPLEMENTATION_PLAN.md  MIGRATION_PLAN.md  PROJECT_ARCHITECTURE.md  cache_architecture_explanation.md  clude_help_1.md  compressor_plan.md  filter_and_rating_for_cache_f911bc7d.md  llm_integration_points.md  tests.md
prompt-cache-service/: .env.example  .gitignore  README.md  pyproject.toml
prompt-cache-service/tests/: test_embedding_isolated.py  test_gemini_live.py  test_hf_client.py  validate_code.py
public/data/: encryption.json
server/: index.js  package-lock.json
src/: App.tsx  index.css
src/components/: ChatMessage.tsx  ChatSidebar.tsx
src/lib/: cache.ts  cacheHybrid.ts  cacheServiceApi.ts  embedApi.ts  filterAndRating.ts  llmClient.ts  mockLLM.ts  userServiceApi.ts  userStore.ts
src/pages/: CacheDashboard.tsx  Chat.tsx  CompressionView.tsx  (+3 more)
src/prompt_cache-master/prompt-cache-service/: .env.production.example  QUICKSTART.md  TESTING.md  pyproject.toml  requirements.txt  test_cache_service.py  test_llm_provider.py  validate_system.py
src/prompt_cache-master/prompt-cache-service/src/prompt_cache_service/: extraction.py  main.py  models.py  router.py
src/prompt_cache-master/prompt-cache-service/src/prompt_cache_service/db_handler/: authentication_provider.py  cache_db_handler.py  embedding.py
(+38 files in other folders)
